table align fixed

--- a/src/NewComponents/Table/Table.css
+++ b/src/NewComponents/Table/Table.css
@@ -14,3 +14,7 @@
 .table-section {
   user-select: none !important;
 }
+
+td {
+  vertical-align: middle !important;
+}
